# workshop-serverless-applications-for-ai

./: .gitignore  LICENSE  README.md  app.py  compose.override.yaml  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  quality_control.yaml  release.yaml
src/functions/profile_avatar_resize_and_store/: main.py
stacks/: __init__.py  kms_stack.py  lambda_profile_avatar_resize_and_store.py  s3_profile_avatar_public.py  s3_profile_avatar_upload.py
utils/: config.py
